# perf-sentinel

./: .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README-FR.md  README.md  SECURITY.md  audit.toml  clippy.toml  confidentialite.html  demo.tape  deny.toml  gpu_compute.py  guide.html  index.html  legal-notice.html  mdrender.js  mentions-legales.html  privacy-policy.html  robots.txt  sitemap.xml  sonar-project.properties  support.js
.cargo/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
crates/sentinel-cli/: Cargo.toml
crates/sentinel-cli/src/: ack.rs  bench.rs  demo.rs  demo_baseline_data.json  demo_data.json  demo_mysql_stat.json  demo_pg_stat.json  disclose.rs  hash_bake.rs  jaeger_cmd.rs  limits.rs  main.rs  monitor.rs  mysql_stat.rs  pg_stat.rs  query.rs  render.rs  tempo_cmd.rs  tui.rs  tui_launch.rs  tui_resize.rs  verify_hash.rs
crates/sentinel-cli/src/tui/: mod.rs  tests.rs
crates/sentinel-cli/tests/: cli_ack.rs  e2e.rs  hash_bake_e2e.rs  verify_hash_e2e.rs
crates/sentinel-cli/tests/browser/: README-FR.md  README.md  global-setup.ts  global-teardown.ts  package-lock.json  package.json  playwright.config.ts  playwright.demo.config.ts  tsconfig.json
crates/sentinel-cli/tests/browser/demo/: build-gif.sh  stills.spec.ts  tour.spec.ts
crates/sentinel-cli/tests/browser/demo/fixtures/: baseline.json
crates/sentinel-cli/tests/browser/tests/: dashboard.spec.ts
crates/sentinel-cli/tests/e2e/: ack.rs  analyze.rs  demo.rs  diff.rs  disclose.rs  explain.rs  helpers.rs  jaeger_query.rs  main.rs  mysql_stat.rs  pg_stat.rs  report.rs  tempo.rs  tui.rs  watch.rs
crates/sentinel-core/: Cargo.toml
crates/sentinel-core/benches/: pipeline.rs
crates/sentinel-core/proptest-regressions/detect/: metamorphic.txt
crates/sentinel-core/src/: acknowledgments.rs  calibrate.rs  config.rs  daemon.rs  diff.rs  event.rs  explain.rs  http_client.rs  lib.rs  pipeline.rs  quality_gate.rs  shutdown.rs  synth.rs  test_helpers.rs  text_safety.rs  time.rs
crates/sentinel-core/src/config/: mod.rs  raw.rs  tests.rs  toml_paths.rs  validate.rs
crates/sentinel-core/src/correlate/: mod.rs  window.rs
crates/sentinel-core/src/daemon/: ack.rs  archive.rs  event_loop.rs  findings_store.rs  health.rs  json_socket.rs  listeners.rs  mem_pressure.rs  mod.rs  query_api.rs  sampling.rs  tls.rs
crates/sentinel-core/src/daemon/query_api/: mod.rs  tests.rs
crates/sentinel-core/src/detect/: chatty.rs  correlate_cross.rs  fanout.rs  metamorphic.rs  mod.rs  n_plus_one.rs  pool_saturation.rs  redundant.rs  sanitizer_aware.rs  serialized.rs  slow.rs  suggestions.rs
crates/sentinel-core/src/detect/suggestions/: mod.rs  tests.rs
crates/sentinel-core/src/ingest/: auth_header.rs  jaeger.rs  jaeger_query.rs  json.rs  lookback.rs  mod.rs  mysql_stat.rs  otlp.rs  pg_stat.rs  tempo.rs  url_enc.rs  zipkin.rs
crates/sentinel-core/src/ingest/otlp/: mod.rs  tests.rs
crates/sentinel-core/src/normalize/: http.rs  metamorphic.rs  mod.rs  sql.rs
crates/sentinel-core/src/report/: html.rs  html_template.html  interpret.rs  json.rs  metrics.rs  mod.rs  sarif.rs  warnings.rs
crates/sentinel-core/src/report/html/: fonts-LICENSE.txt  fonts.css  html_template.html  mod.rs  tests.rs
crates/sentinel-core/src/report/periodic/: aggregator.rs  attestation.rs  errors.rs  hasher.rs  mod.rs  org_config.rs  schema.rs  test_fixtures.rs  validator.rs
crates/sentinel-core/src/score/: canonical.rs  carbon.rs  carbon_compute.rs  carbon_data.rs  carbon_profiles.rs  energy_state.rs  mod.rs  ops_snapshot_diff.rs  prom_parser.rs  region_breakdown.rs  tests.rs
crates/sentinel-core/src/score/alumet/: apply.rs  config.rs  mod.rs  scraper.rs  state.rs  tests.rs
crates/sentinel-core/src/score/cloud_energy/: config.rs  mod.rs  scraper.rs  state.rs  table.rs  table_data.rs
crates/sentinel-core/src/score/electricity_maps/: config.rs  mod.rs  scraper.rs  state.rs
crates/sentinel-core/src/score/kepler/: apply.rs  config.rs  mod.rs  parser.rs  scraper.rs  state.rs  tests.rs
crates/sentinel-core/src/score/redfish/: apply.rs  config.rs  mod.rs  parser.rs  scraper.rs  state.rs  tests.rs
crates/sentinel-core/src/score/scaphandre/: config.rs  mod.rs  ops.rs  parser.rs  scraper.rs  state.rs  tests.rs
crates/sentinel-core/tests/: e2e.rs  periodic_examples.rs
docs/: 00-INDEX.html  00-INDEX.md  ACK-WORKFLOW.html  ACK-WORKFLOW.md  ACKNOWLEDGMENTS.html  ACKNOWLEDGMENTS.md  ARCHITECTURE.html  ARCHITECTURE.md  CI.html  CI.md  CLI.html  CLI.md  CONFIGURATION.html  CONFIGURATION.md  ENERGY.html  ENERGY.md  HELM-DEPLOYMENT.html  HELM-DEPLOYMENT.md  HTML-REPORT.html  HTML-REPORT.md  INSPECT.html  INSPECT.md  INSTRUMENTATION.html  INSTRUMENTATION.md  INTEGRATION.html  INTEGRATION.md  LIMITATIONS.html  LIMITATIONS.md  METHODOLOGY.html  METHODOLOGY.md  METRICS.html  METRICS.md  QUERY-API.html  QUERY-API.md  RELEASE-PROCEDURE.html  RELEASE-PROCEDURE.md  REPORTING.html  REPORTING.md  RUNBOOK.html  RUNBOOK.md  (+8 more)
docs-site/: 00-INDEX-FR.md  00-INDEX.md
examples/: docker-compose-collector.yml  docker-compose-sharded.yml  docker-compose-sidecar.yml  grafana-dashboard.json  otel-collector-config.yaml  otel-collector-sharded.yaml  perf-sentinel-docker.toml  perf-sentinel.toml
exemple/: dashboard.html  tui.cast  tui.html
fonts/: fonts.css
fr/: guide.html  index.html
fuzz/: Cargo.toml
fuzz/fuzz_targets/: json_ingest.rs  normalize_sql.rs
reference/: 00-INDEX.html  ACK-WORKFLOW.html  ACKNOWLEDGMENTS.html  ARCHITECTURE.html  CI.html  CLI.html  CONFIGURATION.html  HELM-DEPLOYMENT.html  HTML-REPORT.html  INSPECT.html  INSTRUMENTATION.html  INTEGRATION.html  LIMITATIONS.html  METHODOLOGY.html  METRICS.html  QUERY-API.html  RELEASE-PROCEDURE.html  REPORTING.html  RUNBOOK.html  SARIF.html  SCHEMA.html  SUPPLY-CHAIN.html  design__00-INDEX.html  design__01-PIPELINE-AND-TYPES.html  design__02-NORMALIZATION.html  design__03-CORRELATION-AND-STREAMING.html  design__04-DETECTION.html  design__05-GREENOPS-AND-CARBON.html  (+7 more)
(+280 files in other folders)
