[workspace]
members = ["crates/sentinel-core", "crates/sentinel-cli"]
resolver = "3"

[workspace.package]
version = "0.5.14"
edition = "2024"
license = "AGPL-3.0-only"
rust-version = "1.95.0"
repository = "https://github.com/robintra/perf-sentinel"
homepage = "https://github.com/robintra/perf-sentinel"
keywords = ["performance", "n-plus-one", "greenops", "observability", "opentelemetry"]
categories = ["development-tools::profiling", "command-line-utilities"]

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"
opt-level = 3
