[workspace]
members = ["crates/sentinel-core", "crates/sentinel-cli"]
resolver = "3"

[workspace.package]
version = "0.7.1"
edition = "2024"
license = "AGPL-3.0-only"
rust-version = "1.95.0"
repository = "https://github.com/robintra/perf-sentinel"
homepage = "https://github.com/robintra/perf-sentinel"
keywords = ["performance", "n-plus-one", "greenops", "observability", "opentelemetry"]
categories = ["development-tools::profiling", "command-line-utilities"]

[profile.release]
codegen-units = 1
lto = "thin"
strip = true
panic = "abort"
opt-level = 3

# Catch cognitive-complexity regressions at pre-commit time rather
# than at SonarCloud time five sprints later. Clippy's
# `cognitive_complexity` lint uses the same algorithm class as
# SonarCloud `rust:S3776`, so a clean `cargo clippy` here implies a
# clean SonarCloud scan for that rule. Crates opt in via
# `lints.workspace = true`.
[workspace.lints.clippy]
cognitive_complexity = "deny"
