[package]
name = "perf-sentinel"
description = "CLI for perf-sentinel: polyglot performance anti-pattern detector"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "perf-sentinel"
path = "src/main.rs"

[features]
default = ["tui", "daemon", "tempo"]
tui = ["ratatui", "crossterm"]
daemon = ["perf-sentinel-core/daemon"]
tempo = ["perf-sentinel-core/tempo"]

[dependencies]
perf-sentinel-core = { version = "0.4.4", path = "../sentinel-core" }
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ratatui = { version = "0.30.0", optional = true }
crossterm = { version = "0.29.0", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2.183"

[dev-dependencies]
serde_json = "1.0.149"
tempfile = "3.27.0"
