[package]
name = "perf-sentinel"
description = "CLI for perf-sentinel: polyglot performance anti-pattern detector"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[[bin]]
name = "perf-sentinel"
path = "src/main.rs"

[features]
default = ["tui", "daemon", "tempo", "jaeger-query"]
tui = ["ratatui", "crossterm"]
daemon = [
    "perf-sentinel-core/daemon",
    "dep:hyper",
    "dep:bytes",
    "dep:humantime",
    "dep:rpassword",
]
tempo = ["perf-sentinel-core/tempo"]
jaeger-query = ["perf-sentinel-core/jaeger-query"]

[dependencies]
perf-sentinel-core = { version = "0.5.26", path = "../sentinel-core" }
clap = { version = "4.6.1", features = ["derive", "env"] }
clap_complete = "4.6.3"
tokio = { version = "1.52.2", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
# Used to stamp the current time when applying acknowledgments. Same
# version line as the core crate, default-features off to skip the
# wasm/JS bindings.
chrono = { version = "0.4", default-features = false, features = ["clock"] }
ratatui = { version = "0.30.0", optional = true }
crossterm = { version = "0.29.0", optional = true }
# Optional, gated behind the `daemon` feature. Used by the
# `perf-sentinel ack` subcommand to issue POST/DELETE/GET against the
# daemon HTTP API. `hyper` and `bytes` line up with the versions used
# transitively by `perf-sentinel-core` so a single resolved version
# stays in the tree.
hyper = { version = "1.9.0", optional = true }
bytes = { version = "1.11.1", optional = true }
humantime = { version = "2.3.0", optional = true }
rpassword = { version = "7.5.2", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2.183"

# Target-gated allocator override for musl static builds. Rationale and
# benchmark numbers in `docs/design/07-CLI-CONFIG-RELEASE.md`.
[target.'cfg(target_env = "musl")'.dependencies]
mimalloc = "0.1.49"

[dev-dependencies]
serde_json = "1.0.149"
tempfile = "3.27.0"
