[package]
name = "perf-sentinel-core"
description = "Core library for perf-sentinel: polyglot performance anti-pattern detector"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "sentinel_core"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
thiserror = "2.0.18"
toml = "1.1.2+spec-1.1.0"
regex = "1.12.3"
tokio = { version = "1.51.1", features = ["rt", "rt-multi-thread", "sync", "time", "net", "signal", "macros", "io-util"] }
tonic = "0.14.5"
prost = "0.14.3"
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic-messages", "trace"] }
axum = "0.8.8"
tower = { version = "0.5.3", features = ["timeout"] }
prometheus = "0.14.0"
lru = "0.16.3"
# HTTP client for the optional Scaphandre scraper. Reuses the
# hyper 1.x already in the tree via axum; hyper-util's legacy client
# provides a reqwest-style builder without adding a full new HTTP crate.
hyper = { version = "1.9.0", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "tokio"] }
# Promoted from dev-dependency: needed by the Scaphandre
# scraper to collect the GET /metrics response body into a String.
http-body-util = "0.1.3"
# small byte-buffer primitive used by the hyper-util request
# body. Already transitively pulled in via hyper; making it a direct
# dep keeps Cargo.lock honest.
bytes = "1.11.1"
# Lock-free shared-Arc swap used by the Scaphandre state and
# snapshot-diff paths so scoring reads are sync and zero-clone.
# The scraper builds a fresh Arc<HashMap> on each successful scrape
# and atomically swaps it in; readers do a single load_full() to get
# their own Arc reference without contending on a lock.
arc-swap = "1.9.1"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util", "timeout"] }
