[package]
name = "perf-sentinel-core"
description = "Core library for perf-sentinel: polyglot performance anti-pattern detector"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "sentinel_core"

[features]
# Enable daemon mode: Scaphandre RAPL scraper, cloud SPECpower scraper,
# and the `watch` command event loop. Without this feature, only batch
# analysis (`analyze`, `explain`, `demo`, `bench`, `pg-stat`) is available.
daemon = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes", "dep:arc-swap", "dep:hyper-rustls", "dep:tokio-rustls", "dep:tokio-stream", "dep:tower-http"]
# Enable `perf-sentinel tempo` subcommand for querying Grafana Tempo API.
tempo = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes", "dep:hyper-rustls"]
# Enable `perf-sentinel jaeger-query` subcommand for querying any
# backend that speaks the Jaeger query API (Jaeger upstream and
# Victoria Traces). Shares the HTTP dependency set with `tempo`.
jaeger-query = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes", "dep:hyper-rustls"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
thiserror = "2.0.18"
toml = "1.1.2"
regex = "1.12.3"
tokio = { version = "1.52.1", features = ["rt", "rt-multi-thread", "sync", "time", "net", "signal", "macros", "io-util"] }
# tonic/axum/tower are unconditional because report/metrics.rs (Prometheus
# /metrics router) uses axum+tower and ingest/otlp.rs uses opentelemetry-proto
# message types which depend on prost (via gen-tonic-messages). The actual
# gRPC/HTTP listeners only run when the daemon feature is enabled at runtime.
tonic = "0.14.5"
prost = "0.14.3"
opentelemetry-proto = { version = "0.31.0", features = ["gen-tonic-messages", "trace"] }
axum = "0.8.9"
tower = { version = "0.5.3", features = ["timeout"] }
prometheus = "0.14.0"
lru = "0.18.0"
# Daemon-only deps (behind the `daemon` feature flag).
hyper = { version = "1.9.0", features = ["client", "http1", "server"], optional = true }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "http2", "tokio", "server-auto"], optional = true }
http-body-util = { version = "0.1.3", optional = true }
bytes = { version = "1.11.1", optional = true }
arc-swap = { version = "1.9.1", optional = true }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http1", "webpki-tokio", "ring", "tls12"], optional = true }
tokio-rustls = { version = "0.26.4", optional = true, default-features = false, features = ["logging", "tls12", "ring"] }

tokio-stream = { version = "0.1.18", optional = true }
# Provides RequestDecompressionLayer for OTLP/HTTP gzip decompression on /v1/traces.
tower-http = { version = "0.6.8", features = ["decompression-gzip", "limit"], optional = true }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util", "timeout"] }
http-body-util = "0.1.3"
tempfile = "3.27.0"
flate2 = "1.1.9"
