[package]
name = "perf-sentinel-core"
description = "Core library for perf-sentinel: polyglot performance anti-pattern detector"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "sentinel_core"

[features]
# Enable daemon mode: Scaphandre RAPL scraper, cloud SPECpower scraper,
# and the `watch` command event loop. Without this feature, only batch
# analysis (`analyze`, `explain`, `demo`, `bench`, `pg-stat`) is available.
daemon = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes", "dep:arc-swap", "dep:hyper-rustls", "dep:tokio-rustls", "dep:tokio-stream", "dep:tower-http", "dep:dirs", "dep:subtle", "dep:libc"]
# Enable `perf-sentinel tempo` subcommand for querying Grafana Tempo API.
tempo = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes", "dep:hyper-rustls"]
# Enable `perf-sentinel jaeger-query` subcommand for querying any
# backend that speaks the Jaeger query API (Jaeger upstream and
# Victoria Traces). Shares the HTTP dependency set with `tempo`.
jaeger-query = ["dep:hyper", "dep:hyper-util", "dep:http-body-util", "dep:bytes", "dep:hyper-rustls"]

[dependencies]
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.149"
tracing = "0.1.44"
thiserror = "2.0.18"
toml = "1.1.2"
regex = "1.12.3"
tokio = { version = "1.52.3", features = ["rt", "rt-multi-thread", "sync", "time", "net", "signal", "macros", "io-util", "fs"] }
# tonic/axum/tower are unconditional because report/metrics.rs (Prometheus
# /metrics router) uses axum+tower, and ingest/otlp.rs uses tonic directly
# (`Request`, `Response`, `Status`, `async_trait`) plus opentelemetry-proto
# message types which depend on prost (via gen-tonic-messages). The actual
# gRPC/HTTP listeners only run when the daemon feature is enabled at runtime.
tonic = "0.14.6"
prost = "0.14.3"
opentelemetry-proto = { version = "0.32.0", features = ["gen-tonic-messages", "trace"] }
axum = "0.8.9"
tower = { version = "0.5.3", features = ["timeout"] }
prometheus = { version = "0.14.0", features = ["process"] }
lru = "0.18.0"
# SHA-256 for the canonical signature of a Finding used by the
# acknowledgments file (`.perf-sentinel-acknowledgments.toml`). The 0.11
# line moved from `generic-array` to `hybrid-array`, so it does not
# unify with the 0.10 sha2 still pulled transitively by rustls and both
# versions ship in the binary. Acceptable trade-off for tracking the
# upstream RustCrypto release. chrono powers the `expires_at` ISO 8601
# date parsing and the "is this ack still active" check
# (`Utc::now()` comparison).
sha2 = "0.11.0"
chrono = { version = "0.4.44", default-features = false, features = ["clock", "serde"] }
# UUID v4 for the `report_uuid` field of periodic disclosure reports.
# Serde feature lets the wire schema embed the value as a JSON string.
uuid = { version = "1.23.1", features = ["v4", "serde"] }
# Daemon-only deps (behind the `daemon` feature flag).
hyper = { version = "1.9.0", features = ["client", "http1", "server"], optional = true }
hyper-util = { version = "0.1.20", features = ["client", "client-legacy", "http1", "http2", "tokio", "server-auto"], optional = true }
http-body-util = { version = "0.1.3", optional = true }
bytes = { version = "1.11.1", optional = true }
arc-swap = { version = "1.9.1", optional = true }
hyper-rustls = { version = "0.27.9", default-features = false, features = ["http1", "webpki-tokio", "ring", "tls12"], optional = true }
tokio-rustls = { version = "0.26.4", optional = true, default-features = false, features = ["logging", "tls12", "ring"] }

tokio-stream = { version = "0.1.18", optional = true }
# Provides RequestDecompressionLayer for OTLP/HTTP gzip decompression on /v1/traces.
tower-http = { version = "0.6.10", features = ["cors", "decompression-gzip", "limit"], optional = true }
# Cross-platform locator for `~/.local/share/perf-sentinel/acks.jsonl`
# (XDG on Linux, Library/Application Support on macOS, Roaming on Windows).
# Daemon-only: only the ack store consumes it, batch builds skip the dep.
dirs = { version = "6.0.0", optional = true }
# Constant-time byte comparison for the optional `[daemon.ack] api_key`
# header check. Daemon-only (loopback API).
subtle = { version = "2.6.1", optional = true }
# `libc::O_NOFOLLOW` for hardened ack-file open. Daemon-only.
libc = { version = "0.2.186", optional = true }

[dev-dependencies]
tower = { version = "0.5.3", features = ["util", "timeout"] }
http-body-util = "0.1.3"
tempfile = "3.27.0"
flate2 = "1.1.9"
